# light-telegram-notifyer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ltm/: __init__.py  notifier.py
ltm/utils/: __init__.py  reply_chatid.py
